--- a/MonthlyStatement/Areas/Admin/Views/ListReportPersonal/Detail.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ListReportPersonal/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿@model MonthlyStatement.Models.PersonalReport
+﻿@model  MonthlyStatement.Models.FormPersonalReport
 @using MonthlyStatement.Models
 @{
     ViewBag.Title = "PersonalDetail";
@@ -9,8 +9,10 @@
 
     CP25Team04Entities models = new CP25Team04Entities();
     int idperiod = Model.report_period_id;
-    int idpersonalreport = Model.personal_report_id;
-
+    var form = models.PersonalReports.Where(p => p.report_period_id == idperiod);
+    string emails = ViewBag.accID;
+    var formPer = models.PersonalReports.Where(p => p.report_period_id == idperiod && p.account_id.Equals(emails));
+    int per = formPer.First().personal_report_id;
 }
 
 <section class="section">
@@ -19,10 +21,9 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo giảng viên: @Model.AspNetUser.Email</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo cá nhân</h4>
                     </div>
                 </div>
-
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
@@ -50,12 +51,14 @@
                                                     <tr class="" style="max-width: 50px">
                                                         <th>@(i). @items_lv2.Category.category_content</th>
                                                     </tr>
+
                                                     @if (models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv2.form_personal_report_detail_id).Count() > 0)
                                                     {
+
                                                         int inputIndex = 0;
                                                         if (!models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
                                                         {
-                                                            foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv2.form_personal_report_detail_id).ToList())
+                                                            foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv2.form_personal_report_detail_id && p.personal_report_id == per).ToList())
                                                             {
                                                                 inputIndex++;
                                                                 <tr id="formInput-@items_lv2.category_id-@inputIndex">
@@ -67,7 +70,7 @@
                                                         }
                                                         else
                                                         {
-                                                            foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv2.form_personal_report_detail_id).ToList())
+                                                            foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv2.form_personal_report_detail_id && p.personal_report_id == per).ToList())
                                                             {
                                                                 inputIndex++;
                                                                 <tr id="formInput-@items_lv2.category_id-@inputIndex" class="d-none">
@@ -79,9 +82,7 @@
                                                         }
                                                     }
                                                     <tr hidden id="append-@items.category_id"></tr>
-
                                                 </tbody>
-
                                             </table>
 
                                         </div>
@@ -99,7 +100,7 @@
                                                                 <tr class="" style="max-width: 50px">
                                                                     <th>@items_lv3.Category.category_content</th>
                                                                 </tr>
-                                                                @{ var items_groupby = models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id &&items_lv3.form_personal_report_detail_id == x.form_personal_report_detail_id).GroupBy(x => x.form_personal_report_detail_id).ToList();}
+                                                                @{ var items_groupby = models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id && items_lv3.form_personal_report_detail_id == x.form_personal_report_detail_id).GroupBy(x => x.form_personal_report_detail_id).ToList();}
 
                                                                 @foreach (var item in items_groupby)
                                                                 {
@@ -109,7 +110,7 @@
                                                                         inputIndex++;
                                                                         if (models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_content_lv3.form_personal_report_detail_id).Count() > 0)
                                                                         {
-                                                                            foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_content_lv3.form_personal_report_detail_id).ToList())
+                                                                            foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_content_lv3.form_personal_report_detail_id && p.personal_report_id == per).ToList())
                                                                             {
                                                                                 <tr>
                                                                                     <td>
@@ -132,14 +133,15 @@
                             }
                             <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
                             <div class="section-title mt-3" style="font-weight:bold">
-                                <label>@(((char) (++j)).ToString()). BÌNH LUẬN</label>
+                                <label>@(((char) (++j)).ToString()). MINH CHỨNG</label>
                             </div>
                             <hr />
                             <div class="col-12">
                                 <div class="card" style="background-color: #e9ecef">
                                     <div class="card-body">
+
                                         <div class="chat">
-                                            @foreach (var comment in models.Comments.Where(x => x.personal_report_id == idpersonalreport).ToList())
+                                            @foreach (var comment in models.Comments.Where(x => x.personal_report_id == per).ToList())
                                             {
                                                 <div class="chat-header clearfix">
                                                     <img alt="image" src="~/assets/img/user.png" class="rounded-circle img-fluid">
@@ -153,12 +155,13 @@
                                                     </div>
                                                 </div>
                                             }
+
                                         </div>
                                         <hr />
                                         <h4>Viết bình luận .... <span class="fas fa-pen" style="font-size:1.2rem"></span></h4>
                                         @using (Html.BeginForm("PostCommentPersonal", "Comments", FormMethod.Post))
                                         {
-                                            <input type="hidden" name="id" value="@idpersonalreport" />
+                                            <input type="hidden" name="id" value="@per" />
                                             <div class="form-group">
                                                 <textarea class="form-control" name="CommentText" style="height:200px !important"></textarea>
                                             </div>
