--- a/MonthlyStatement/Areas/Admin/Views/ListReportStaff/Detail.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ListReportStaff/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿@model MonthlyStatement.Models.StaffReport
+﻿@model  MonthlyStatement.Models.FormStaffReport
 @using MonthlyStatement.Models
 @{
     ViewBag.Title = "StaffDetail";
@@ -9,8 +9,10 @@
 
     CP25Team04Entities models = new CP25Team04Entities();
     int idperiod = Model.report_period_id;
-    int idstaffreport = Model.staff_report_id;
-
+    var form = models.StaffReports.Where(p => p.report_period_id == idperiod);
+    string emails = ViewBag.accID;
+    var formPer = models.StaffReports.Where(p => p.report_period_id == idperiod && p.account_id.Equals(emails));
+    int per = formPer.First().staff_report_id;
 }
 
 <section class="section">
@@ -19,10 +21,9 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo giảng viên: @Model.AspNetUser.Email</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo nhân viên</h4>
                     </div>
                 </div>
-
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
@@ -50,12 +51,14 @@
                                                     <tr class="" style="max-width: 50px">
                                                         <th>@(i). @items_lv2.Category.category_content</th>
                                                     </tr>
+
                                                     @if (models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == items_lv2.form_staff_report_detail_id).Count() > 0)
                                                     {
+
                                                         int inputIndex = 0;
                                                         if (!models.FormStaffReports.FirstOrDefault(f => f.report_period_id == idperiod).FormStaffReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
                                                         {
-                                                            foreach (var items_content in models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == items_lv2.form_staff_report_detail_id).ToList())
+                                                            foreach (var items_content in models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == items_lv2.form_staff_report_detail_id && p.staff_report_id == per).ToList())
                                                             {
                                                                 inputIndex++;
                                                                 <tr id="formInput-@items_lv2.category_id-@inputIndex">
@@ -67,7 +70,7 @@
                                                         }
                                                         else
                                                         {
-                                                            foreach (var items_content in models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == items_lv2.form_staff_report_detail_id).ToList())
+                                                            foreach (var items_content in models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == items_lv2.form_staff_report_detail_id && p.staff_report_id == per).ToList())
                                                             {
                                                                 inputIndex++;
                                                                 <tr id="formInput-@items_lv2.category_id-@inputIndex" class="d-none">
@@ -79,9 +82,7 @@
                                                         }
                                                     }
                                                     <tr hidden id="append-@items.category_id"></tr>
-
                                                 </tbody>
-
                                             </table>
 
                                         </div>
@@ -109,7 +110,7 @@
                                                                         inputIndex++;
                                                                         if (models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == items_content_lv3.form_staff_report_detail_id).Count() > 0)
                                                                         {
-                                                                            foreach (var items_content in models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == items_content_lv3.form_staff_report_detail_id).ToList())
+                                                                            foreach (var items_content in models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == items_content_lv3.form_staff_report_detail_id && p.staff_report_id == per).ToList())
                                                                             {
                                                                                 <tr>
                                                                                     <td>
@@ -132,14 +133,15 @@
                             }
                             <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
                             <div class="section-title mt-3" style="font-weight:bold">
-                                <label>@(((char) (++j)).ToString()). BÌNH LUẬN</label>
+                                <label>@(((char) (++j)).ToString()). MINH CHỨNG</label>
                             </div>
                             <hr />
                             <div class="col-12">
                                 <div class="card" style="background-color: #e9ecef">
                                     <div class="card-body">
+
                                         <div class="chat">
-                                            @foreach (var comment in models.Comments.Where(x => x.staff_report_id == idstaffreport).ToList())
+                                            @foreach (var comment in models.Comments.Where(x => x.staff_report_id == per).ToList())
                                             {
                                                 <div class="chat-header clearfix">
                                                     <img alt="image" src="~/assets/img/user.png" class="rounded-circle img-fluid">
@@ -153,19 +155,18 @@
                                                     </div>
                                                 </div>
                                             }
+
                                         </div>
                                         <hr />
                                         <h4>Viết bình luận .... <span class="fas fa-pen" style="font-size:1.2rem"></span></h4>
-                                        @using (Html.BeginForm("PostCommentStaff", "Comments", FormMethod.Post))
+                                        @using (Html.BeginForm("PostComment", "CommentsStaff", FormMethod.Post))
                                         {
-                                            <input type="hidden" name="id" value="@idstaffreport" />
+                                            <input type="hidden" name="id" value="@per" />
                                             <div class="form-group">
                                                 <textarea class="form-control" name="CommentText" style="height:200px !important"></textarea>
                                             </div>
                                             <div class="text-right mt-3">
-                                                <button class="btn btn-primary" type="submit">
-                                                    Gửi
-                                                </button>
+                                                <button class="btn btn-primary" type="submit">Gửi</button>
                                             </div>
                                         }
                                     </div>
