--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/Edit.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/Edit.cshtml
@@ -16,6 +16,12 @@
                         </div>
                     </div>
                     <div class="card-body">
+                        @if (ViewBag.Message != null)
+                        {
+                            <div class="alert alert-success" role="alert" style="text-align: center; font-weight: bold;">
+                                @ViewBag.Message
+                            </div>
+                        }
                         <div class="table-responsive">
                             @using (Html.BeginForm("Edit", "ReportPeriods", FormMethod.Post, new { }))
                             {
@@ -31,28 +37,28 @@
 
                                 <!-- Form Group (Ngày bắt đầu)-->
                                 <div class="mb-3">
-                                    <label class="small mb-1">Ngày bắt đầu (MM/dd/yyy hh:mm:ss)</label>
-                                    @Html.TextBoxFor(model => model.start_date, new { @class = "form-control", @required = "" })
-                                </div>
-                                <!-- Form Group (Ngày báo cáo)-->
-                                <div class="mb-3">
-                                    <label class="small mb-1">Ngày báo cáo (MM/dd/yyy hh:mm:ss)</label>
-                                    @Html.TextBoxFor(model => model.deadline_date, new { @class = "form-control", @required = "" })
+                                    <label class="small mb-1">Ngày bắt đầu</label>
+                                    <input name="start_date" type="date" class="form-control" readonly value="@(Model.start_date?.ToString("yyyy-MM-dd"))" />
                                 </div>
                                 <!-- Form Group (Ngày kết thúc)-->
                                 <div class="mb-3">
-                                    <label class="small mb-1">Ngày kết thúc (MM/dd/yyy hh:mm:ss)</label>
-                                    @Html.TextBoxFor(model => model.end_date, new { @class = "form-control", @required = "" })
+                                    <label class="small mb-1">Ngày kết thúc</label>
+                                    <input name="end_date" type="date" class="form-control" readonly value="@(Model.end_date?.ToString("yyyy-MM-dd"))" />
+                                </div>
+                                <!-- Form Group (Ngày báo cáo)-->
+                                <div class="mb-3">
+                                    <label class="small mb-1">Ngày hạn báo cáo</label>
+                                    <input name="deadline_date" type="date" class="form-control" min="@(Model.start_date?.ToString("yyyy-MM-dd"))" max="@(Model.end_date?.ToString("yyyy-MM-dd"))" value="@(Model.deadline_date?.ToString("yyyy-MM-dd"))" />
                                 </div>
 
                                 <div style="text-align: center; margin-top:1.8rem" class="mb-3">
-                                    <button style="width:180px; color:white" type="submit" class="btn btn-primary">
-                                        Lưu
-                                    </button>
-                                    &emsp;
                                     <a style="width:180px; color:white;" role="button" class="btn btn-secondary" href="@Url.Action("Index", "ReportPeriods", new { id = Model.report_year_id})">
                                         Trở về
                                     </a>
+                                    &emsp;
+                                    <button style="width:180px; color:white" type="submit" class="btn btn-primary">
+                                        Lưu
+                                    </button>
                                 </div>
                             }
                         </div>
