--- a/MonthlyStatement/Areas/Staff/Views/FormStaffReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Staff/Views/FormStaffReport/Index.cshtml
@@ -238,7 +238,7 @@ else
                                     </div>*@
 
                                 <div class="text-right mt-3">
-                                    <button id="btnSubmit" role="button" class="btn btn-primary">Lưu báo cáo</button>
+                                    <a id="btnSubmit" role="button" class="btn btn-primary" href="@Url.Action("SendMailStaffAsync","NotificationStaff")">Lưu báo cáo</a>
                                 </div>
                             </div>
                         </div>
