--- a/MonthlyStatement/Views/Shared/_Layout.cshtml
+++ b/MonthlyStatement/Views/Shared/_Layout.cshtml
@@ -127,25 +127,25 @@
                                 <ul class="sidebar-menu">
                                     
                                     <li class=@(ViewBag.Title == "Quản lý khoa" ? "active" : "nav-item")>
-                                        <a href="@Url.Action("Index", "Faculty", new { Area = "SecretaryAreas" })" class="nav-link"><i data-feather="book"></i><span>Quản lý khoa</span></a>
+                                        <a href="@Url.Action("Index", "Faculty", new { Area = "Secretary" })" class="nav-link"><i data-feather="book"></i><span>Quản lý khoa</span></a>
                                     </li>
                                     <li class=@(ViewBag.Title == "Quản lý danh mục" ? "active" : "nav-item")>
-                                        <a href="@Url.Action("Index", "Categories", new { Area = "SecretaryAreas" })" class="nav-link"><i data-feather="grid"></i><span>Quản lý danh mục</span></a>
+                                        <a href="@Url.Action("Index", "Categories", new { Area = "Secretary" })" class="nav-link"><i data-feather="grid"></i><span>Quản lý danh mục</span></a>
                                     </li>
                                     <li class="dropdown">
                                     <li class=@(ViewBag.Title == "Quản lý báo cáo" ? "active" : "nav-item")>
-                                        <a href="@Url.Action("Index", "YearReport", new { Area = "SecretaryAreas" })" class="nav-link"><i data-feather="briefcase"></i><span>Quản lý kỳ báo cáo</span></a>
+                                        <a href="@Url.Action("Index", "YearReport", new { Area = "Secretary" })" class="nav-link"><i data-feather="briefcase"></i><span>Quản lý kỳ báo cáo</span></a>
                                     </li>
                                     <li class="dropdown">
                                         <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="file"></i><span>Quản lý báo cáo</span></a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="nav-link" href="@Url.Action("Index", "ListReportDepartment", new { Area = "SecretaryAreas" })">Bộ môn</a></li>
-                                            <li><a class="nav-link" href="@Url.Action("Index", "ListReportPersonal", new { Area = "SecretaryAreas" })">Giảng viên</a></li>
-                                            <li><a class="nav-link" href="@Url.Action("Index", "ListReportStaff", new { Area = "SecretaryAreas" })">Nhân viên</a></li>
+                                            <li><a class="nav-link" href="@Url.Action("Index", "ListReportDepartment", new { Area = "Secretary" })">Bộ môn</a></li>
+                                            <li><a class="nav-link" href="@Url.Action("Index", "ListReportPersonal", new { Area = "Secretary" })">Giảng viên</a></li>
+                                            <li><a class="nav-link" href="@Url.Action("Index", "ListReportStaff", new { Area = "Secretary" })">Nhân viên</a></li>
                                         </ul>
                                     </li>
                                     <li class=@(ViewBag.Title == "Thống kê" ? "active" : "nav-item")>
-                                        <a href="@Url.Action("Index", "Statistical", new { Area = "SecretaryAreas" })" class="nav-linkn"><i data-feather="bar-chart"></i><span>Thống kê</span></a>
+                                        <a href="@Url.Action("Index", "Statistical", new { Area = "Secretary" })" class="nav-linkn"><i data-feather="bar-chart"></i><span>Thống kê</span></a>
                                     </li>
                                 </ul>
                             }
