--- a/MonthlyStatement/Areas/Admin/Views/Categories/Edit.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Categories/Edit.cshtml
@@ -18,7 +18,7 @@
                         @if (ViewBag.CheckEditCate != null)
                         {
                             <div class="alert alert-danger" role="alert">
-                               Danh mục này đã được sử dụng trong biễu mẫu, vui lòng tạo danh mục khác!
+                                Danh mục này đã được lưu vào biễu mẫu, vui lòng không chỉnh sửa!
                             </div>
                         }
                         <div class="table-responsive">
