--- a/MonthlyStatement/Areas/Department/Views/FormDepartmentReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/FormDepartmentReport/Index.cshtml
@@ -116,10 +116,10 @@
                                                                         <td colspan="2">
                                                                             <div class="row">
                                                                                 <div class="col">
-                                                                                    <button role="button" name="@itemss.category_id" id="xoanoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-danger container"><i class="fas fa-times"></i></button>
+                                                                                    <button role="button" name="@itemss.category_id" id="xoanoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-danger container" data-uppercatedelete='@itemss.category_id'><i class="fas fa-times"></i></button>
                                                                                 </div>
                                                                                 <div class="col">
-                                                                                    <button role="button" name="@itemss.category_id" id="themnoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-success container"><i class="fas fa-plus-circle"></i></button>
+                                                                                    <button role="button" name="@itemss.category_id" id="themnoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-success container" data-uppercateadd='@itemss.category_id'><i class="fas fa-plus-circle"></i></button>
                                                                                 </div>
                                                                             </div>
                                                                         </td>
@@ -179,63 +179,21 @@
                                                                                 <tr class="" style="max-width: 50px">
                                                                                     <th colspan="2">@itemsss.Category.category_content</th>
                                                                                 </tr>
-                                                                                @{
-                                                                                    var lv3List = models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == itemss.category_id).ToList();
-                                                                                    <tr>
-                                                                                        <td colspan="@lv3List.Count">
-                                                                                            <div>
-                                                                                                <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
-                                                                                                    @foreach (var items_lv3 in lv3List)
-                                                                                                    {
-                                                                                                        <div class="col">
-                                                                                                            <table class="table dataTable">
-                                                                                                                <tbody>
-                                                                                                                    @{ var items_groupby = models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == itemss.category_id && items_lv3.form_personal_report_detail_id == x.form_personal_report_detail_id).GroupBy(x => x.form_personal_report_detail_id).ToList();}
-
-                                                                                                                    @foreach (var item in items_groupby)
-                                                                                                                    {
-                                                                                                                        foreach (var items_content_lv3 in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == itemss.category_id && x.form_personal_report_detail_id == item.Key).ToList())
-                                                                                                                        {
-                                                                                                                            int inputIndex = 0;
-                                                                                                                            inputIndex++;
-                                                                                                                            if (models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_content_lv3.form_personal_report_detail_id).Count() > 0)
-                                                                                                                            {
-                                                                                                                                foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_content_lv3.form_personal_report_detail_id && p.personal_report_id == perMapping).ToList())
-                                                                                                                                {
-                                                                                                                                    <tr>
-                                                                                                                                        <td>
-                                                                                                                                            <input readonly type="text" value="@items_content.personal_report_content" class="form-control" id="noidung-@items_content_lv3.category_id">
-                                                                                                                                        </td>
-                                                                                                                                    </tr>
-                                                                                                                                }
-                                                                                                                            }
-                                                                                                                        }
-                                                                                                                    }
-                                                                                                                    <tr hidden id="append-@items.category_id"></tr>
-                                                                                                                </tbody>
-                                                                                                            </table>
-                                                                                                        </div>
-                                                                                                    }
-                                                                                                </div>
-                                                                                            </div>
-                                                                                        </td>
-                                                                                    </tr>
-                                                                                }
+                                                                                <tr hidden id="append-@itemsss.category_id"></tr>
                                                                                 <tr id="formInput-@itemsss.category_id-">
                                                                                     <td colspan="2">
                                                                                         <input type="text" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-@itemsss.category_id-1">
                                                                                         <p hidden id="validation-noidung-@itemsss.category_id-1" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>
                                                                                     </td>
                                                                                 </tr>
-                                                                                <tr hidden id="append-@itemsss.category_id"></tr>
                                                                                 <tr>
                                                                                     <td colspan="2">
                                                                                         <div class="row">
                                                                                             <div class="col">
-                                                                                                <button role="button" name="@itemsss.category_id" id="xoanoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-danger container"><i class="fas fa-times"></i></button>
+                                                                                                <button role="button" name="@itemsss.category_id" id="xoanoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-danger container" data-uppercatedelete='@itemss.category_id'><i class="fas fa-times"></i></button>
                                                                                             </div>
                                                                                             <div class="col">
-                                                                                                <button role="button" name="@itemsss.category_id" id="themnoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-success container"><i class="fas fa-plus-circle"></i></button>
+                                                                                                <button role="button" name="@itemsss.category_id" id="themnoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-success container" data-uppercateadd='@itemss.category_id'><i class="fas fa-plus-circle"></i></button>
                                                                                             </div>
                                                                                         </div>
                                                                                     </td>
@@ -338,20 +296,19 @@
                                 </tbody>
                                 foreach (var itemss in lstCate.Where(c => c.category_of_id == items.category_id).ToList())
                                 {
-                                    var perDetailMapping = perDetail.Where(per => per.FormPersonalReportDetail.category_id == itemss.category_id).Select(content => content.personal_report_content.ToLower()).Distinct().ToList();
+                                    var perDetailMapping = perDetail.Where(per => per.FormPersonalReportDetail.category_id == itemss.category_id).GroupBy(f => f.personal_report_content.ToLower()).ToList();
                                     <tbody>
                                         <tr>
                                             <td class="text-center pt-2">
                                             </td>
                                             <td>LV 3</td>
-
                                             <td>
                                                 <div class="media mt-3">
                                                     <div class="pr-5" href="#">
                                                     </div>@itemss.category_content
                                                     @for (int y = 0; y < perDetailMapping.Count; y++)
                                                     {
-                                                        <input type="hidden" class="perDetailMapping-@itemss.category_id" value="@perDetailMapping[y]" />
+                                                        <input type="hidden" class="perDetailMapping-@itemss.category_id" value="@perDetailMapping[y].Key" />
                                                     }
                                                 </div>
                                             </td>
@@ -363,8 +320,6 @@
                                 }
                             }
                         }
-
-
                         @*<tbody>
                                 <tr class="Search">
                                     <td class="text-center">
@@ -465,7 +420,9 @@
             var mappingContent = $('.perDetailMapping-' + categoryid);
             let inputCount = Number($('#dem-' + categoryid).val()) + 1;
             mappingContent.each(function () {
-                $('#append-' + categoryid).replaceWith('<tr id="formInput-' + categoryid + '-' + inputCount + '"><td colspan="2"><input readonly type="text" value="' + $(this).val() + '" class="form-control" id="noidung-' + categoryid + '-' + inputCount + '">'
+                console.log($(this).val());
+                $('#append-' + categoryid).replaceWith('<tr id="formInput-' + categoryid + '-' + inputCount + '"><td colspan="2"><input readonly type="text" value="'
+                    + $(this).val() + '" class="form-control" id="noidung-' + categoryid + '-' + inputCount + '">'
                     + '<p hidden id="validation-noidung-' + categoryid + '-' + inputCount + '" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>'
                     + '</td ></tr > <tr hidden id="append-' + categoryid + '"></tr>');
             });
@@ -473,20 +430,27 @@
     });
     //Thêm input
     $('[id^="themnoidung-"]').on('click', function (e) {
-        let id = $(this).attr("name");
-        let inputCount = Number($('#dem-' + id).val()) + 1;
-        $('#append-' + id).replaceWith('<tr id="formInput-' + id + '-' + inputCount + '"><td colspan="2"><input type="text" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-' + id + '-' + inputCount + '">'
-            + '<p hidden id="validation-noidung-' + id + '-' + inputCount + '" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>'
-            + '</td ></tr > <tr hidden id="append-' + id + '"></tr>');
-        $('#dem-' + id).val(inputCount);
+        var upperCateAdd = $(this).data('uppercateadd');
+        $('[data-uppercateadd="' + upperCateAdd + '"]').each(function () {
+            var id = $(this).attr("name");
+            var inputCount = Number($('#dem-' + id).val()) + 1;
+            $('#append-' + id).replaceWith('<tr id="formInput-' + id + '-' + inputCount + '"><td colspan="2"><input type="text" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-' + id + '-' + inputCount + '">'
+                + '<p hidden id="validation-noidung-' + id + '-' + inputCount + '" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>'
+                + '</td ></tr > <tr hidden id="append-' + id + '"></tr>');
+            $('#dem-' + id).val(inputCount);
+        });
     });
     $('[id^="xoanoidung-"]').on('click', function () {
-        let id = $(this).attr("name");
-        let inputCount = Number($('#dem-' + id).val());
-        if (inputCount > 1) {
-            $('#formInput-' + id + '-' + inputCount).remove();
-            $('#dem-' + id).val((inputCount - 1));
-        }
+        var upperCateDelete = $(this).data('uppercatedelete');
+        $('[data-uppercatedelete="' + upperCateDelete + '"]').each(function () {
+            let id = $(this).attr("name");
+            let inputCount = Number($('#dem-' + id).val());
+            if (inputCount > 1) {
+                $('#formInput-' + id + '-' + inputCount).remove();
+                $('#dem-' + id).val((inputCount - 1));
+            }
+        });
+
     });
     //xóa input
     $('#btnSubmit').on('click', function () {
